--- a/res/l10n/ru.json
+++ b/res/l10n/ru.json
@@ -118,71 +118,65 @@
                     "multilevel": "*структурная опция*",
                     "list": "*список*"
                 },
-                "prefix": {
-                    "help": {
-                        "desc": "Поменять префикс бота на сервере. Пустой аргумент - сброс на `{def_prefix}`.",
-                        "args": {
-                            "new_prefix": "новый префикс"
-                        }    
+                "commands": {
+                    "prefix": {
+                        "help": {
+                            "desc": "Поменять префикс бота на сервере. Пустой аргумент - сброс на `{def_prefix}`.",
+                            "args": {
+                                "new_prefix": "новый префикс"
+                            }    
+                        },
+                        "title": "Префикс успешно изменён",
+                        "desc": "Новый префикс для бота: `{new_prefix}`."
                     },
-                    "title": "Префикс успешно изменён",
-                    "desc": "Новый префикс для бота: `{new_prefix}`."
-                },
-                "language": {
-                    "help": {
-                        "desc": "Поменять язык бота для этого сервера.",
-                        "extra": "Доступные языки: `{lang_names}`.",
-                        "args": {
-                            "new_lang": "новый язык"
+                    "language": {
+                        "help": {
+                            "desc": "Поменять язык бота для этого сервера.",
+                            "extra": "Доступные языки: `{lang_names}`.",
+                            "args": {
+                                "new_lang": "новый язык"
+                            }
+                        },
+                        "title": "Язык бота успешно изменён",
+                        "desc": "Теперь бот будет отвечать на русском языке."
+                    },
+                    "leave": {
+                        "help": {
+                            "desc": "Удалить бота из сервера с опциональной очисткой конфигурации. Эту команду могут выполнять только администраторы."
+                        },
+                        "title_msg": "{name} готов к выходу...",
+                        "desc_msg": "Вы уверены, что хотите удалить бота из сервера? Выберите один из вариантов ниже.\n\nВыйти - бот выйдет и удалит только свои вебхуки и отключит логи.\nВыйти и забыть - также полностью удалит все данные о сервере из баз данных бота.\nОтмена - оставить бота.",
+                        "ui": {
+                            "leave": {
+                                "label": "Выйти",
+                                "title": "{name} покинул сервер. До встречи!",
+                                "desc": "Мы надеемся, что вам понравился наш бот! В случае, если вы передумаете, мы оставили вашу конфигурацию, так что бот продолжит свою работу также, как и до выхода, когда вы решите вернуть нас назад."
+                            },
+                            "purge": {
+                                "label": "Выйти и забыть",
+                                "title": "{name} покинул и забыл сервер",
+                                "desc": "Мы надеемся, что вам понравился наш бот! Вспе данные о вашем сервере были удалены с наших серверов, так что вы можете не беспокоиться о своей конфиденциальности. В случае, если вы передумаете о нашем уходе, бота можно вернуть в строй, однако может потребоваться его повторная настройка."
+                            },
+                            "cancel": {
+                                "label": "Отмена",
+                                "title": "Выход отменён",
+                                "desc": "Бот остаётся на сервере. Мы вас не подведём."
+                            }
                         }
                     },
-                    "title": "Язык бота успешно изменён",
-                    "desc": "Теперь бот будет отвечать на русском языке."
-                },
-                "leave": {
-                    "help": {
-                        "desc": "Удалить бота из сервера с опциональной очисткой конфигурации. Эту команду могут выполнять только администраторы."
-                    },
-                    "title_msg": "{name} готов к выходу...",
-                    "desc_msg": "Вы уверены, что хотите удалить бота из сервера? Выберите один из вариантов ниже.\n\nВыйти - бот выйдет и удалит только свои вебхуки и отключит логи.\nВыйти и забыть - также полностью удалит все данные о сервере из баз данных бота.\nОтмена - оставить бота.",
-                    "ui": {
-                        "leave": {
-                            "label": "Выйти",
-                            "title": "{name} покинул сервер. До встречи!",
-                            "desc": "Мы надеемся, что вам понравился наш бот! В случае, если вы передумаете, мы оставили вашу конфигурацию, так что бот продолжит свою работу также, как и до выхода, когда вы решите вернуть нас назад."
+                    "toggle_cog": {
+                        "help": {
+
                         },
-                        "purge": {
-                            "label": "Выйти и забыть",
-                            "title": "{name} покинул и забыл сервер",
-                            "desc": "Мы надеемся, что вам понравился наш бот! Вспе данные о вашем сервере были удалены с наших серверов, так что вы можете не беспокоиться о своей конфиденциальности. В случае, если вы передумаете о нашем уходе, бота можно вернуть в строй, однако может потребоваться его повторная настройка."
-                        },
-                        "cancel": {
-                            "label": "Отмена",
-                            "title": "Выход отменён",
-                            "desc": "Бот остаётся на сервере. Мы вас не подведём."
-                        }
+                        "title": "Статус модуля",
+                        "active": "активен",
+                        "inactive": "неактивен",
+                        "nocog_error": "Модуля с таким именем не существует.",
+                        "intcog_error": "Этот модуль является внутренним и не может быть деактивирован.",
+                        "status_desc": "Модуль \"{cog_name}\" в данный момент имеет статус \"{status}\" на данном сервере.",
+                        "enable_desc": "Модуль \"{cog_name}\" была активирован.",
+                        "disable_desc": "Модуль \"{cog_name}\" была деактивирован."
                     }
-                },
-                "resps": {
-                    "title": "Ответы на триггеры",
-                    "desc_on": "Теперь бот будет отвечать на сообщения-триггеры.",
-                    "desc_off": "Бот больше не будет отвечать на сообщения-триггеры."
-                },
-                "telemetry": {
-                    "title": "Канал-аудит",
-                    "desc_on": "Действия будут записываться в {channel}.",
-                    "desc_off": "Действия больше не будут записываться.",
-                    "error_desc": "Нет доступа к вебхукам. Пожалуйста, проверьте права бота."
-                },
-                "toggle_cog": {
-                    "title": "Статус модуля",
-                    "active": "активен",
-                    "inactive": "неактивен",
-                    "nocog_error": "Модуля с таким именем не существует.",
-                    "intcog_error": "Этот модуль является внутренним и не может быть деактивирован.",
-                    "status_desc": "Модуль \"{cog_name}\" в данный момент имеет статус \"{status}\" на данном сервере.",
-                    "enable_desc": "Модуль \"{cog_name}\" была активирован.",
-                    "disable_desc": "Модуль \"{cog_name}\" была деактивирован."
                 }
             }
         },
