fix: rewritten reload cmd to be more reliable and informative

--- a/res/l10n/ru.json
+++ b/res/l10n/ru.json
@@ -82,8 +82,10 @@
                     },
                     "reload": {
                         "start": "*Начинаю реинициализацию модулей...*",
-                        "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*{traceback}",
-                        "success": "*Реинициализация успешно завершена.*"
+                        "success": "*Реинициализация успешно завершена.*",
+                        "error": "*Реинициализация завершена с ошибками. Подробности выведены в консоль.*",
+                        "cogs_error": "\n> *Следующие модули не удалось перезагрузить:*\n- {cogs}",
+                        "l10n_error": "\n> *Не удалось перезагрузить локализацию.*"
                     },
                     "host_info": {
                         "title": "Информация о хосте",
